--- a/XUnitTestProject1/XUnitTestProject1/XUnitTestProject1.csproj
+++ b/XUnitTestProject1/XUnitTestProject1/XUnitTestProject1.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Allure.Commons" Version="2.4.2.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="SpecFlow" Version="3.0.199" />
     <PackageReference Include="xunit" Version="2.4.0" />
