--- a/XUnitTestProject1/XUnitTestProject1/XUnitTestProject1.csproj
+++ b/XUnitTestProject1/XUnitTestProject1/XUnitTestProject1.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Allure.Commons" Version="2.4.2.4" />
+    <PackageReference Include="AllureCSharpCommons" Version="0.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="SpecFlow" Version="3.0.199" />
     <PackageReference Include="xunit" Version="2.4.0" />
