--- a/XUnitTestProject1/XUnitTestProject1/XUnitTestProject1.csproj
+++ b/XUnitTestProject1/XUnitTestProject1/XUnitTestProject1.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="SpecFlow" Version="3.0.199" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="XunitXml.TestLogger" Version="2.1.26" />
   </ItemGroup>
 
 </Project>
