--- a/XUnitTestProject5/XUnitTestProject5/XUnitTestProject5.csproj
+++ b/XUnitTestProject5/XUnitTestProject5/XUnitTestProject5.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Allure.Commons" Version="2.4.2.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="RestSharp" Version="106.6.9" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
