--- a/sq/Demo_2/packages.config
+++ b/sq/Demo_2/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Allure.Commons" version="2.4.2.4" targetFramework="net45" />
+  <package id="MimeTypesMap" version="1.0.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="Selenium.Chrome.WebDriver" version="2.45" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net45" />
   <package id="Selenium.WebDriver.ChromeDriver" version="73.0.3683.68" targetFramework="net45" />
@@ -9,4 +12,5 @@
   <package id="xunit.core" version="2.0.0" targetFramework="net45" />
   <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
   <package id="xunit.runner.visualstudio" version="2.0.1" targetFramework="net45" />
+  <package id="XunitXml.TestLogger" version="2.1.26" targetFramework="net45" />
 </packages>
